--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -14,11 +14,11 @@ $pull: true;
 
 // Include responsive grid widths w/breakpoint namespace?
 $responsive:           true;
-$responsive-push-pull: true;
+$responsive-push-pull: false;
 
 // Base measurements
-$base-font-size:         15px;
-$base-line-height:       25px;
+$base-font-size:         18px;
+$base-line-height:       30px;
 $base-font-size--mobile: $base-font-size;
 // Set to px value if mobile requires different font size
 
@@ -42,26 +42,19 @@ $desk-start:   1024px;
 $wall-start:   1200px;
 
 // Colors
-$black:        #000;
-$gray-dark:    #4c4c4c;
-$gray:         #999;
-$gray-light:   #f0f0f0;
-$white:        #fff;
+$black:        #583318;
+$gray:         #c2b2a7;
+$white:        #fff9ee;
 
-$primary:      #203c7b; // dark blue
-$secondary:    #0084cb; // light blue
-$tertiary:     #4f2683; // purple
-$quaternary:   #fff5a9; // yellow
-// quinary, senary, septenary, octonary, nonary, denary
+$primary:      #7abcb5; // light teal
+$secondary:    #41a29c; // dark teal
+$tertiary:     #e48d38; // orange
+// quaternary, quinary, senary, septenary, octonary, nonary, denary
 
 // Form validation colors
 $state-success:  #468847;
 $state-error:    #b94a48;
 
 // Fonts
-$font-body: Georgia, Times, "Times New Roman", serif;
-
-// Examples for custom @font-face (see _fonts.scss for declaration)
-// $font-body:    "PatuaOne", Georgia, Times, "Times New Roman", serif;
-// $font-accent:  "Lobster", "Arial Black", "Arial Bold", sans-serif;
-// $font-small:   "Aller", Arial, Helvetica, sans-serif;
+$font-body:      "SourceSans", Arial, Helvetica, sans-serif;
+$font-headings:  "Fontatica4F", Arial, Helvetica, sans-serif;
