--- a/scss/_manifest.scss
+++ b/scss/_manifest.scss
@@ -14,15 +14,15 @@
 @import "base/widths";
 @import "base/push";
 @import "base/pull";
-@import "base/island";
+//@import "base/island";
 @import "base/lists";
-@import "base/media";
+//@import "base/media";
 @import "base/shared";
 @import "base/helpers";
 
 @import "ui/fonts";
 @import "ui/typography";
-@import "ui/forms";
+//@import "ui/forms";
 @import "ui/buttons";
 @import "ui/layout";
 
