--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -56,5 +56,5 @@ $state-success:  #468847;
 $state-error:    #b94a48;
 
 // Fonts
-$font-body:      "SourceSans", Arial, Helvetica, sans-serif;
+$font-body:      "Source Sans Pro", Arial, Helvetica, sans-serif;
 $font-headings:  "Fontatica4F", Arial, Helvetica, sans-serif;
