--- a/scss/ui/_buttons.scss
+++ b/scss/ui/_buttons.scss
@@ -3,25 +3,23 @@
 //------------------------------------//
 
 .btn {
+  @include inline-block;
   margin: 0;
-  padding: .4em 1em;
-  line-height: 1.6em;
+  padding: .5em 1.5em .4em;
+  color: $white;
+  font-family: $font-headings;
+  @include rem(font-size, (30/18));
+  line-height: 1em;
+  text-transform: uppercase;
   text-align: center;
   vertical-align: middle;
   white-space: nowrap;
-  border: 1px solid $gray;
+  border: 0;
+  border-radius: 1em;
+  background: $primary;
   cursor: pointer;
-  @include inline-block;
-  @include rem(font-size, 1);
-  border-radius: 0;
+  @include box-shadow(0 5px 0 $secondary);
 
-  &,
   &:hover,
   &:focus { text-decoration: none; }
-
-  &.disabled,
-  &[disabled] {
-    cursor: not-allowed;
-    opacity: 0.65;
-  }
 }
