--- a/scss/ui/_fonts.scss
+++ b/scss/ui/_fonts.scss
@@ -2,6 +2,8 @@
 //  $FONTS
 //------------------------------------//
 
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+
 /**
  * @license
  * MyFonts Webfont Build ID 2881398, 2014-09-11T09:39:05-0400
