--- a/scss/ui/_typography.scss
+++ b/scss/ui/_typography.scss
@@ -6,6 +6,7 @@ html {
   font: #{($base-font-size/16px)*1em}/#{$line-height-ratio} $font-body;
   color: $black;
   background: $white;
+  text-align: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -18,31 +19,29 @@ a {
 
 i { font-style: normal; }
 
-h1, .h1 {
-  @include rem(font-size, 1.875);
+h1, h2, h3 {
+  margin-bottom: 0;
+  font-family: $font-headings;
+  text-transform: uppercase;
   line-height: 1;
 }
 
+h1, .h1 {
+  @include rem(font-size, 2);
+}
+
 h2, .h2 {
-  @include rem(font-size, 1.25);
-  line-height: 1.2;
+  @include rem(font-size, 1.6);
 }
 
 h3, .h3 {
-  @include rem(font-size, 1);
-  line-height: 1.4;
-}
-
-h4, .h4 {
-  @include rem(font-size, .875);
+  @include rem(font-size, 1.2);
 }
 
 @include media-query(lap-and-up) {
-  h1, .h1 { @include rem(font-size, 3.6); }
+  h1, .h1 { @include rem(font-size, (90/18)); }
 
-  h2, .h2 { @include rem(font-size, 2.4); }
+  h2, .h2 { @include rem(font-size, (60/18)); }
 
-  h3, .h3 { @include rem(font-size, 1.5); }
-
-  h4, .h4 { @include rem(font-size, 1.2); }
+  h3, .h3 { @include rem(font-size, (30/18)); }
 }
