--- a/scss/ui/_layout.scss
+++ b/scss/ui/_layout.scss
@@ -8,6 +8,39 @@ body { min-width: $site-min-width; }
   max-width: $site-wrapper-max-width;
   margin-left: auto;
   margin-right: auto;
-  @include rem(padding-left, $gutter, $base-font-size--mobile);
-  @include rem(padding-right, $gutter, $base-font-size--mobile);
+}
+
+.container {
+  max-width: $site-wrapper-max-width;
+  margin-left: auto;
+  margin-right: auto;
+  @include rem(padding-left, $gutter);
+  @include rem(padding-right, $gutter);
+  @include clearfix;
+  
+  @include media-query(lap-and-up) {
+    @include rem(padding-left, $gutter*2);
+    @include rem(padding-right, $gutter*2);
+    &.narrow {
+      width: 80%;
+      max-width: 720px;
+    }
+  }
+}
+
+// vertically centered content, requires parent with display:table;
+.v-centered {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+// images that fill the background
+.figure {
+  position: relative;
+  width: 100%;
+  img, video {
+    width: 100% !important;
+    height: auto !important;
+    vertical-align: middle;
+  }
 }
