--- a/scss/ui/_typography.scss
+++ b/scss/ui/_typography.scss
@@ -19,9 +19,10 @@ a {
 
 i { font-style: normal; }
 
-h1, h2, h3 {
+h1, h2, h3, .h1, .h2, .h3 {
   margin-bottom: 0;
   font-family: $font-headings;
+  font-weight: normal;
   text-transform: uppercase;
   line-height: 1;
 }
