--- a/scss/ui/_buttons.scss
+++ b/scss/ui/_buttons.scss
@@ -12,6 +12,7 @@
   line-height: 1em;
   text-transform: uppercase;
   text-align: center;
+  text-decoration: none;
   vertical-align: middle;
   white-space: nowrap;
   border: 0;
