--- a/scss/ui/_typography.scss
+++ b/scss/ui/_typography.scss
@@ -11,10 +11,8 @@ html {
 }
 
 a {
-  color: $primary;
-  text-decoration: none;
-
-  &:hover { text-decoration: underline; }
+  color: $black;
+  text-decoration: underline;
 }
 
 i { font-style: normal; }
