--- a/scss/ui/_layout.scss
+++ b/scss/ui/_layout.scss
@@ -28,6 +28,15 @@ body { min-width: $site-min-width; }
   }
 }
 
+.padding {
+  @include rem(padding-top, $gutter);
+  @include rem(padding-bottom, $gutter);
+  @include media-query(lap-and-up) {
+    @include rem(padding-top, $gutter*2);
+    @include rem(padding-bottom, $gutter*2);
+  }
+}
+
 .table {
   display: table;
   width: 100%;
