lay out side by side modules

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -43,6 +43,7 @@ $wall-start:   1200px;
 
 // Colors
 $black:        #583318;
+$grayDark:     #91857d;
 $gray:         #c2b2a7;
 $white:        #fff9ee;
 
