add gallery images

--- a/scss/ui/_layout.scss
+++ b/scss/ui/_layout.scss
@@ -46,6 +46,13 @@ body { min-width: $site-min-width; }
   }
 }
 
+@include media-query(below-lap) {
+  .neg-margin {
+    @include rem(margin-left, -$gutter);
+    @include rem(margin-right, -$gutter);
+  }
+}
+
 .table {
   display: table;
   width: 100%;
