--- a/scss/ui/_content.scss
+++ b/scss/ui/_content.scss
@@ -48,14 +48,14 @@
   }
 }
 
-.intro {
-}
-
 .what {
   position: relative;
   background: $primary;
   .h2 {
     color: $white;
+  }
+  .figure-on-top {
+    background: $secondary;
   }
   @include media-query(lap-and-up) {
     &:after {
@@ -99,6 +99,7 @@
   }
   .figure-on-top {
     @include rem(padding-top, $base-spacing-unit);
+    background: $tertiary;
   }
   .numbers {
     margin: 0;
@@ -139,6 +140,11 @@
       @include rem(padding-top, $base-spacing-unit*2);
     }
   }
+  @include media-query(below-lap) {
+    .figure-on-top img {
+      max-width: 50%;
+    }
+  }
 }
 
 .customize {
@@ -149,9 +155,26 @@
 .created {
   color: $tertiary;
   a {
+    display: block;
+    margin: 0.5em 0;
     text-decoration: none;
     background: $tertiary;
-    border-radius: 1em;
+    border-radius: 0.5em;
+    img {
+      width: 100%;
+    }
+    span {
+      display: inline-block;
+      padding: 0.8em;
+    }
+    &:hover span {
+      text-decoration: underline;
+    }
+  }
+  @include media-query(lap-and-up) {
+    a {
+      @include rem(margin, $base-spacing-unit 0 0);
+    }
   }
 }
 
@@ -162,10 +185,8 @@
   .grid {
     position: relative;
   }
-  .content-over-image {
-    a {
-      color: $white;
-    }
+  .content-over-image a {
+    color: $white;
   }
   @include media-query(lap-and-up) {
     &:after {
