--- a/scss/ui/_buttons.scss
+++ b/scss/ui/_buttons.scss
@@ -4,6 +4,8 @@
 
 .btn {
   @include inline-block;
+  position: relative;
+  top: 0;
   margin: 0;
   padding: .6em 1.5em .4em;
   color: $white;
@@ -20,7 +22,12 @@
   background: $primary;
   cursor: pointer;
   @include box-shadow(0 5px 0 $secondary);
+  @include transition(all 0.1s ease);
 
   &:hover,
-  &:focus { text-decoration: none; }
+  &:focus {
+    top: 3px;
+    text-decoration: none;
+    @include box-shadow(0 2px 0 $secondary);
+  }
 }
