--- a/scss/ui/_content.scss
+++ b/scss/ui/_content.scss
@@ -30,9 +30,14 @@
   }
   .btn {
     position: absolute;
+    top: auto;
     left: 50%;
     bottom: 2em;
     @include translateX(-50%);
+    &:hover,
+    &:focus {
+      bottom: 1.9em;
+    }
   }
   .github {
     @include hide-text;
@@ -96,6 +101,27 @@
 
 .features {
   background: $gray;
+  li {
+    position: relative;
+    padding-bottom: 1em;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      margin-left: -5px;
+      height: 10px;
+      width: 10px;
+      background: $grayDark;
+      border-radius: 100%;
+    }
+    &:last-child {
+      padding-bottom: 0;
+      &:after {
+        content: none;
+      }
+    }
+  }
 }
 
 .launch {
@@ -158,6 +184,27 @@
 .customize {
   color: $white;
   background: $secondary;
+  li {
+    position: relative;
+    padding-bottom: 1em;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      margin-left: -5px;
+      height: 10px;
+      width: 10px;
+      background: $primary;
+      border-radius: 100%;
+    }
+    &:last-child {
+      padding-bottom: 0;
+      &:after {
+        content: none;
+      }
+    }
+  }
 }
 
 .created {
@@ -224,9 +271,16 @@
   p {
     margin-bottom: 1.5em;
   }
-  .twitter {
-    width: 100px;
-    text-align: left;
+  @include media-query(lap-and-up) {
+    .twitter {
+      width: 100px;
+      text-align: left;
+    }
+  }
+  @include media-query(below-lap) {
+    .h-list--centered li {
+      display: block;
+    }
   }
 }
 
