--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,6 +2,11 @@
 //  $VARIABLES
 //------------------------------------//
 
+/*
+  spaceBase version: 1.0
+  http://spacebase.space150.com
+*/
+
 $legacy-ie: false !default;
 
 // To select Reset or Normalize, see _manifest.scss.
