--- a/scss/ui/_buttons.scss
+++ b/scss/ui/_buttons.scss
@@ -9,7 +9,7 @@
   margin: 0;
   padding: .6em 1.5em .4em;
   color: $white;
-  font-family: $font-headings;
+  font-family: $font-head;
   @include rem(font-size, (30/18));
   line-height: 1em;
   text-transform: uppercase;
