--- a/scss/ui/_typography.scss
+++ b/scss/ui/_typography.scss
@@ -30,7 +30,7 @@ pre {
 }
 
 h1, h2, h3, .h1, .h2, .h3 {
-  font-family: $font-headings;
+  font-family: $font-head;
   font-weight: normal;
   text-transform: uppercase;
   line-height: 1.2;
