Use a layout for the homepage
We can use the same layout to make more pages for things like
documentation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<!DOCTYPE html>
+<!--[if (lt IE 7) & (!IEMobile)]>     <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if (IE 7) & (!IEMobile)]>        <html class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if (IE 8) & (!IEMobile)]>        <html class="lt-ie9"> <![endif]-->
+<!--[if (IE 9) & (!IEMobile)]>        <html class="lt-ie10"> <![endif]-->
+<!--[if (gt IE 9) | (IEMobile) | !(IE)]><!--> <html> <!--<![endif]-->
   {% include head.html %}
-
   <body>
+    {% include tag-manager.html %}
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    {{ content }}
 
     {% include footer.html %}
-
   </body>
-
 </html>
