--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,25 @@
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <meta name="keywords" content="space150" />
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:site_name" content="spaceBase" />
+  <meta property="og:url" content="http://spacebase.space150.com" />
+  <meta property="og:title" content="{{ site.title}}" />
+  <meta property="og:description" content="{{site.description}}" />
+  <meta property="og:image" content="images/spacebase-facebook.jpg" />
+  <meta name="twitter:card" content="spaceBase" />
+
+  <!--[if (gt IE 8) | (IEMobile)]><!-->
+  <link href="css/application.css" media="all" rel="stylesheet" type="text/css" />
+  <!--<![endif]-->
+  <!--[if (lt IE 9) & (!IEMobile)]>
+  <link href="css/application-ie.css" media="all" rel="stylesheet" type="text/css" />
+  <![endif]-->
+
+  <script type="text/javascript" src="javascripts/vendor/modernizr.min.js"></script>
 </head>
