--- a/_sass/ui/_content.scss
+++ b/_sass/ui/_content.scss
@@ -52,6 +52,7 @@
       top: auto;
       left: 50%;
       bottom: 2em;
+      -webkit-transform: translateX(-50%);
       transform: translateX(-50%);
       &:hover,
       &:focus {
@@ -185,6 +186,7 @@
         position: absolute;
         top: 0;
         left: 50%;
+        -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
         padding: 0.2em 0.5em 0.1em;
         color: $black;
