change grays on styleguide

--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -61,7 +61,7 @@ $media-features: (
 $black:        #583318;
 $gray-dark:    #91857d;
 $gray:         #c2b2a7;
-$gray-light:   #c2b2a7;
+$gray-light:   #dfd7d0;
 $white:        #fff9ee;
 
 $primary:      #7abcb5; // light teal
