--- a/_sass/_manifest.scss
+++ b/_sass/_manifest.scss
@@ -2,28 +2,28 @@
 // Any file that has been modified has been copied in to this directory, while
 // all stock spaceBase files are imported from the submodule (../_spaceBase).
 
+@import "../_spaceBase/scss/base/functions";
 @import "vars";
 @import "../_spaceBase/scss/vendor/normalize"; $normalize: true;
 
 @import
 // BASE
-  "../_spaceBase/scss/base/functions",
   "../_spaceBase/scss/base/mixins",
   "../_spaceBase/scss/base/grids",
   "../_spaceBase/scss/base/widths",
   "../_spaceBase/scss/base/push",
   "../_spaceBase/scss/base/pull",
-  "base/shared",
+  "../_spaceBase/scss/base/shared",
   "../_spaceBase/scss/base/helpers",
 // UI
   "ui/fonts",
   "ui/typography",
-  "ui/forms",
   "ui/buttons",
-  "ui/island",
-  "ui/lists",
-  "ui/media",
+  "../_spaceBase/scss/ui/forms",
+  "../_spaceBase/scss/ui/island",
+  "../_spaceBase/scss/ui/lists",
+  "../_spaceBase/scss/ui/media",
   "ui/layout",
   "ui/content",
-  "ui/print"
+  "../_spaceBase/scss/ui/print"
 ;
