--- a/_sass/ui/_buttons.scss
+++ b/_sass/ui/_buttons.scss
@@ -7,7 +7,7 @@
   margin: 0;
   padding: .6em 1.5em .4em;
   font-family: $font-head;
-  @include rem(font-size, (30/18));
+  font-size: rem(30/18);
   line-height: 1em;
   text-transform: uppercase;
   text-align: center;
