--- a/_sass/ui/_content.scss
+++ b/_sass/ui/_content.scss
@@ -7,7 +7,7 @@
   color: $tertiary;
   background: $black;
   .content-over-image {
-    @include rem(padding, $base-spacing-unit 0);
+    padding: $base-spacing-unit 0;
   }
   .logo {
     @include hide-text;
@@ -31,8 +31,8 @@
   .github a {
     @include hide-text;
     position: absolute;
-    @include rem(top, $base-spacing-unit/2);
-    @include rem(right, $base-spacing-unit/2);
+    top: $half-spacing-unit;
+    right: $half-spacing-unit;
     width: 33px;
     height: 33px;
     background: url('../images/github.png') no-repeat;
@@ -41,7 +41,7 @@
   }
   .shoutout {
     color: $black;
-    @include rem(font-size, 0.889);
+    font-size: rem(0.889);
     a {
       color: $black;
     }
@@ -60,15 +60,15 @@
       }
     }
     .github a {
-      @include rem(top, $base-spacing-unit);
-      @include rem(right, $base-spacing-unit);
+      top: $base-spacing-unit;
+      right: $base-spacing-unit;
     }
     .shoutout {
       position: absolute;
-      @include rem(bottom, $base-spacing-unit/2);
-      @include rem(right, $base-spacing-unit);
+      bottom: $half-spacing-unit;
+      right: $base-spacing-unit;
       color: $tertiary;
-      @include rem(font-size, 0.889);
+      font-size: rem(0.889);
       z-index: 20;
       a {
         color: $tertiary;
@@ -81,7 +81,7 @@
     }
     .content-over-image {
       position: relative;
-      @include rem(padding-bottom, $base-spacing-unit/2);
+      padding-bottom: $half-spacing-unit;
       background: url('../images/hero.png') no-repeat center bottom;
       background-size: auto 100%;
     }
@@ -128,11 +128,11 @@
     display: block;
   }
   img {
-    @include rem(margin, 1 0 0.6);
+    margin: rem(1 0 0.6);
   }
   @include media($from: lap) {
     img {
-      @include rem(margin, 0.4 0 1.5);
+      margin: rem(0.4 0 1.5);
     }
   }
 }
@@ -170,7 +170,7 @@
     color: $tertiary;
   }
   .figure-on-top {
-    @include rem(padding-top, $base-spacing-unit);
+    padding-top: $base-spacing-unit;
     background: $tertiary;
   }
   .numbers {
@@ -191,7 +191,7 @@
         padding: 0.2em 0.5em 0.1em;
         color: $black;
         font-family: $font-head;
-        @include rem(font-size, 1.667);
+        font-size: rem(1.667);
         line-height: 1;
         background: $tertiary;
         border-radius: 100%;
@@ -213,7 +213,7 @@
       z-index: 0;
     }
     .figure-on-top {
-      @include rem(padding-top, $base-spacing-unit*2);
+      padding-top: $base-spacing-unit*2;
     }
     .numbers {
       margin-top: 3.333em;
@@ -273,13 +273,13 @@
   }
   @include media($from: lap) {
     a {
-      @include rem(margin, $base-spacing-unit 0 0);
-      @include rem(font-size, 0.889);
+      margin: $base-spacing-unit 0 0;
+      font-size: rem(0.889);
     }
   }
   @include media($from: desk) {
     a {
-      @include rem(font-size, 1);
+      font-size: rem(1);
     }
   }
 }
@@ -315,14 +315,14 @@
 }
 
 .download {
-  @include rem(padding, $base-spacing-unit*2 0);
+  padding: $base-spacing-unit*2 0;
   @include media($from: lap) {
-    @include rem(padding, $gutter*3 0);
+    padding: $gutter*3 0;
   }
 }
 
 .contribute {
-  @include rem(padding, $base-spacing-unit 0);
+  padding: $base-spacing-unit 0;
   color: $white;
   background: $black;
   p {
@@ -341,7 +341,7 @@
 }
 
 .footer {
-  @include rem(padding, $base-spacing-unit 0);
-  @include rem(font-size, 0.889);
+  padding: $base-spacing-unit 0;
+  font-size: rem(0.889);
   background: $tertiary;
 }
