--- a/_sass/ui/_layout.scss
+++ b/_sass/ui/_layout.scss
@@ -14,13 +14,11 @@ body { min-width: $site-min-width; }
   max-width: $site-wrapper-max-width;
   margin-left: auto;
   margin-right: auto;
-  @include rem(padding-left, $gutter);
-  @include rem(padding-right, $gutter);
+  @include padding-horizontal($gutter);
   @include clearfix;
 
   @include media($from: lap) {
-    @include rem(padding-left, $gutter*2);
-    @include rem(padding-right, $gutter*2);
+    @include padding-horizontal($gutter*2);
     &.narrow {
       width: 80%;
       max-width: 700px;
@@ -29,27 +27,24 @@ body { min-width: $site-min-width; }
 }
 
 .padding {
-  @include rem(padding-top, $gutter);
-  @include rem(padding-bottom, $gutter);
+  @include padding-vertical($gutter);
   @include media($from: lap) {
-    @include rem(padding-top, $gutter*2);
-    @include rem(padding-bottom, $gutter*2);
+    @include padding-vertical($gutter*2);
   }
 }
 
 @include media($from: lap) {
   .left {
-    @include rem(padding-right, $gutter*2);
+    padding-right: $gutter*2;
   }
   .right {
-    @include rem(padding-left, $gutter*2);
+    padding-left: $gutter*2;
   }
 }
 
 @include media($upto: lap) {
   .neg-margin {
-    @include rem(margin-left, -$gutter);
-    @include rem(margin-right, -$gutter);
+    @include padding-horizontal(-$gutter);
   }
 }
 
