--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
@@ -14,12 +14,5 @@
   <meta property="og:image" content="images/spacebase-facebook.jpg" />
   <meta name="twitter:card" content="spaceBase" />
 
-  <!--[if (gt IE 8) | (IEMobile)]><!-->
   <link href="css/application.css" media="all" rel="stylesheet" type="text/css" />
-  <!--<![endif]-->
-  <!--[if (lt IE 9) & (!IEMobile)]>
-  <link href="css/application-ie.css" media="all" rel="stylesheet" type="text/css" />
-  <![endif]-->
-
-  <script type="text/javascript" src="javascripts/vendor/modernizr.min.js"></script>
 </head>
