--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--[if (lt IE 7) & (!IEMobile)]>     <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if (IE 7) & (!IEMobile)]>        <html class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if (IE 8) & (!IEMobile)]>        <html class="lt-ie9"> <![endif]-->
-<!--[if (IE 9) & (!IEMobile)]>        <html class="lt-ie10"> <![endif]-->
-<!--[if (gt IE 9) | (IEMobile) | !(IE)]><!--> <html> <!--<![endif]-->
+<html>
   {% include head.html %}
   <body>
     {% include tag-manager.html %}
