--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -1,8 +1,6 @@
 ---
 ---
-@charset "utf-8";
 
-$legacy-ie: true;
 @import "../_spaceBase/scss/base/functions";
 @import "vars";
 @import "../_spaceBase/scss/base/mixins";
@@ -37,7 +35,7 @@ $legacy-ie: true;
 .sg-colors li {
   border: 1px solid $gray-light;
   background: $white;
-  padding: rem(.4);
+  padding: .4rem;
   margin-bottom: $half-spacing-unit;
 }
 
@@ -45,6 +43,14 @@ $legacy-ie: true;
   display: block;
   height: 100px;
   width: 100px;
+  position: relative;
+
+  &:after {
+    display: block;
+    left: 0;
+    position: absolute;
+    top: 100px;
+  }
 }
 
 .sg-field-container {
@@ -53,4 +59,19 @@ $legacy-ie: true;
   label {
     display: block;
   }
+}
+
+@for $i from 1 through length($styleguide-colors) {
+  .sg-colors li:nth-of-type(#{$i}) .sg-swatch {
+    background: nth($styleguide-colors, $i);
+
+    &:after {
+      content: "#{nth($styleguide-colors, $i)}";
+    }
+  }
+}
+
+.sg-colors .sg-label {
+  display: block;
+  margin-top: $base-spacing-unit;
 }
