simplify web fonts

--- a/_sass/ui/_fonts.scss
+++ b/_sass/ui/_fonts.scss
@@ -32,22 +32,16 @@
 
 @font-face {
   font-family: 'Fontatica4F';
-  src: url('../fonts/2BF776_1_0.eot');
-  src: url('../fonts/2BF776_1_0.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/2BF776_1_0.woff') format('woff'),
-      url('../fonts/2BF776_1_0.ttf') format('truetype'),
-      url('../fonts/2BF776_1_0.svg#fontatica') format('svg');
+  src: url('../fonts/2BF776_1_0.woff') format('woff'),
+      url('../fonts/2BF776_1_0.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Fontatica4F';
-  src: url('../fonts/2BF776_0_0.eot');
-  src: url('../fonts/2BF776_0_0.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/2BF776_0_0.woff') format('woff'),
-      url('../fonts/2BF776_0_0.ttf') format('truetype'),
-      url('../fonts/2BF776_0_0.svg#fontatica') format('svg');
+  src: url('../fonts/2BF776_0_0.woff') format('woff'),
+      url('../fonts/2BF776_0_0.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
