update social sharing meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,16 @@
 
   <meta property="og:site_name" content="spaceBase" />
   <meta property="og:url" content="http://spacebase.space150.com" />
-  <meta property="og:title" content="{{ site.title}}" />
+  <meta property="og:title" content="{{site.title}}" />
   <meta property="og:description" content="{{site.description}}" />
   <meta property="og:image" content="images/spacebase-facebook.jpg" />
-  <meta name="twitter:card" content="spaceBase" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@space150" />
+  <meta name="twitter:title" content="{{site.title}}" />
+  <meta name="twitter:description" content="{{site.description}}" />
+  <meta name="twitter:image" content="images/spacebase-facebook.jpg" />
 
   <link href="css/application.css" media="all" rel="stylesheet" type="text/css" />
 </head>
