--- a/_sass/ui/_fonts.scss
+++ b/_sass/ui/_fonts.scss
@@ -36,6 +36,7 @@
       url('../fonts/2BF776_1_0.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -44,4 +45,5 @@
       url('../fonts/2BF776_0_0.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
