--- a/_sass/ui/_typography.scss
+++ b/_sass/ui/_typography.scss
@@ -1,9 +1,10 @@
 //------------------------------------//
 //  $TYPOGRAPHY
 //------------------------------------//
+@use "sass:math";
 
 html {
-  font: #{($base-font-size/16px)*1em}/#{$line-height-ratio} $font-body;
+  font: #{math.div($base-font-size--mobile, 16px)*1em}/#{$line-height-ratio} $font-body;
   color: $black;
   background: $white;
   text-align: center;
